Emails: fix z-index of annual popover

--- a/client/my-sites/email/email-providers-comparison/billing-interval-toggle/style.scss
+++ b/client/my-sites/email/email-providers-comparison/billing-interval-toggle/style.scss
@@ -24,6 +24,8 @@
 }
 
 .emails-save-paying-annually__popover {
+	z-index: z-index( 'root', '.masterbar' ) - 1;
+
 	.popover__inner {
 		padding: 10px;
 	}
